third_party/move/move-compiler-v2/tests/checking/utf8-comment/crlf-invalid1.exp

Diagnostics:
error: invalid byte string
  ┌─ tests/checking/utf8-comment/crlf-invalid1.move:4:30
  │
4 │        const C: vector<u8> = b"abcdef
  │                              ^^^^^^^^ Missing closing quote (") after byte string
